<resources>
    <string name="app_name">IntroAndroidApp</string>
    <string name="degFah">Degrees Fahrenheit</string>
    <string name="degCel">Degrees Celsius</string>
    <string name="degKel">Degrees Kelvin</string>
    <string name="tempChoose">Choose your temperature</string>
    <string name="convert">Convert</string>
    <string name="enterTemp">Please enter the temperature and select the correct units then press Convert:</string>
    <string name="Welcome">Welcome to Alicia Murphy\'s App</string>
    <string name="goWeather">Convert\nTemp</string>
    <string name="goTicTacToe">Tic Tac Toe</string>
    <string name="goInfo">Info</string>
    <string name="goMusic">Favorite\nSong</string>
    <string name="goTakePic">Take\nPicture</string>
    <string name="goDraw">My\nDrawing</string>
    <string name="title_activity_tic_tac_toe">TicTacToeActivity</string>
    <string name="message_label">Player X\'s turn</string>
    <string name="new_game_button">New Game</string>
    <string name="informationTitle">Your Information</string>
    <string name="favoriteSeason">What is your favorite season?</string>
    <string name="favoriteTemp">What is your favorite temperature?</string>
    <string name="allergies">Do you have allergies?</string>
    <string-array name="seasons">
        <item>Spring</item>
        <item>Summer</item>
        <item>Fall</item>
        <item>Winter</item>
    </string-array>
</resources>
