<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alicia.introandroidapp.WeatherActivity">

    <TextView
        android:id="@+id/lblChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tempChoose"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06"
        tools:textSize="20sp" />

    <RadioGroup
        android:id="@+id/tempGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="209dp"
        android:layout_marginRight="209dp"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="116dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblChoose">

        <RadioButton
            android:id="@+id/btnDegF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degFah" />

        <RadioButton
            android:id="@+id/btnDegC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degCel" />

        <RadioButton
            android:id="@+id/btnDegK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degKel" />
    </RadioGroup>

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="43dp"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="152dp"
        android:text="@string/convert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempGroup" />

    <TextView
        android:id="@+id/lblEntertemp"
        android:layout_width="352dp"
        android:layout_height="46dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="9dp"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="9dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="11dp"
        android:text="@string/enterTemp"
        app:layout_constraintBottom_toTopOf="@+id/txtInputTemp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblChoose" />

    <EditText
        android:id="@+id/txtInputTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/tempGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblEntertemp" />

    <TextView
        android:id="@+id/lblOutputF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="19dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempGroup" />

    <TextView
        android:id="@+id/lblOutputC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/lblOutputK"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblOutputF" />

    <TextView
        android:id="@+id/lblOutputK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="61dp"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnConvert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblOutputC" />


</android.support.constraint.ConstraintLayout>
